[package]
name = "seamless"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["cargo", "derive"] }
rdev = { version = "0.5.3", features = ["serialize"] }
tokio ={ version = "1.21.0",features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
